--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -96,3 +96,144 @@ article img#img1:hover {
     cursor: pointer;
     background: #000;
 }
+
+.mosaique {
+    display: flex;
+    flex-direction: column;
+
+    width: 80%;
+    margin: 0 auto;
+    flex-wrap: wrap;
+
+
+}
+
+.group_mosaique {
+    display: flex;
+    position: relative;
+    /* border: 1px solid yellow; */
+    /* /* width:100%; */
+    height: 300px;
+    overflow: hidden;
+    margin: 10px;
+    /* border: 1px solid white; */
+}
+
+.image {
+    position: relative;
+    top: -50px;
+    padding: 0;
+    margin: 0;
+    height:100%;
+    width: 100%; 
+    /* display: table-cell; */
+    transform: scale(1.5) ;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+    /* width: 100%; */
+    /* height: 300px; */
+    text-align: center;
+    /* vertical-align: middle; */
+    /* transition: 1.2s; */
+    margin:5px;
+    
+}
+
+.image1 {
+    /* width:300px; */
+    background: url("../../images/products/132357-large.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.image2 {
+    background: url("../../images/products/115175-large.jpg");
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    background-size: cover;
+   
+
+    /* height: 200px; */
+}
+
+.image3 {
+    background-image: url("../../images/products/145124-large.jpg");
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    background-size: cover;
+
+
+    /* height: 200px; */
+}
+
+.image4 {
+    background-image: url("../../images/products/99095-large.jpg");
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    background-size: cover;
+
+
+    /* height: 200px; */
+}
+
+.image5 {
+    background-image: url("../../images/products/99098-large.jpg");
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    background-size: cover;
+
+
+    /* height: 200px; */
+}
+
+.image6 {
+    background-image: url("../../images/products/99101-large.jpg");
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    background-size: cover;
+
+
+    /* height: 200px; */
+}
+
+.image:hover {
+    transform: scale(1.4);
+    transition:all 0.7s ease-in-out;
+    /* width: 100%; */
+    /* height: 120%; */
+    font-size: 2.2em;
+    opacity: 0.4;
+    /* transition: background-size 1.2s; */
+}
+
+/* .image>span {
+    font-size: 1em;
+} */
+
+
+/* .test1:hover  {
+position: relative;
+} */
+/* .test1::after {
+    content: "";
+    position: absolute;
+    top:50%;
+    left:50%;
+    opacity: 0.5;
+    transform: translate(-50% ,-50%);
+    width: 100%;
+    height: 100%;
+    background: #000;
+}  */
+
+/* .test2 {
+    position: relative;
+
+}
+
+.test2:hover {
+    filter: blur(1px);
+
+} */
